<resources>
    <string name="app_name" translatable="false">Maria Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="book_your_slots">Book Your Slots</string>
    <string name="checkout">Checkout</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="profile">Profile</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="addresses">Addresses</string>
    <string name="payment_method">Payment Method</string>
    <string name="track_order">Track Order</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="order_history">Order History</string>
    <string name="your_order_has_been_placed_successfully_n_you_can_see_the_status_of_your_order">Your order has been placed successfully.\n You can see the status of your order.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="agree_to_the_terms_conditions">Agree to the <b>Terms &amp; Conditions</b></string>
    <string name="password_8_character">Password must have atleast 8 character</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_Password">Enter Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="re_order">Re-Order</string>
    <string name="server_client_id">1087608872383-af1p1hkv0kphpc46ju1ogk8kerc05ff3.apps.googleusercontent.com</string>
<!--    <string name="server_client_id">1087608872383-fj43ipvm49paqunt2p4ruf0i1r54nk4o.apps.googleusercontent.com</string>-->
    <string name="facebook_app_id">686300939989231</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">f125bddb37fc45120ace9080d7b2b574</string>
    <string name="schedule_delivery">Schedule Delivery</string>
    <string name="order_now">Order Now</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="_100_halal_n_chicken">100% Halal \n Chicken</string>
    <string name="temperature_controlled">Temperature Controlled</string>
    <string name="trusted_customers">Trusted Customers</string>
    <string name="search">search</string>
    <string name="add">Add</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="state_optional">State (optional)</string>
    <string name="address">Address</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="time_slots">Time Slots</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="next">NEXT</string>
    <string name="verify">Verify</string>
    <string name="add_address">Add Address</string>
    <string name="update">Update</string>
    <string name="save_your_delivery_address">Save your delivery address</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="buy_now">Buy Now</string>
    <string name="our_chicken_is_sourced_from_trusted_halal_suppliers">Our chicken is sourced from trusted Halal suppliers</string>
    <string name="highest_standard_assured_by_on_site_veterinarian_expertise">Highest standard assured by on-site Veterinarian expertise.</string>
    <string name="we_take_pride_in_the_trust_our_customers_place_in_us">We take pride in the trust our customers place in us.</string>
    <string name="we_have_a_fast_and_efficient_delivery_system_for_your_convenience">We have fast and efficient delivery system for your convenience.</string>
    <string name="food_quality_and_safety">Food Quality And Safety</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="share_the_app">Share The App</string>
    <string name="my_cart">My Cart</string>

</resources>