<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_bg"
        android:elevation="@dimen/_5sdp"
        android:paddingBottom="32dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/months"
            style="@style/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_delivery_address"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.03" />


        <EditText
            android:id="@+id/email"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            app:layout_constraintVertical_bias="0.92" />


        <TextView
            android:id="@+id/textView24"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/email"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lName" />

        <EditText
            android:id="@+id/fName"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView25"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/full_name"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/months"
            app:layout_constraintVertical_bias="0.05" />


        <EditText
            android:id="@+id/lName"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView255" />

        <TextView
            android:id="@+id/textView255"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/last_name"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/phone"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etaTxt" />

        <TextView
            android:id="@+id/etaTxt"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/mobile_number"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/textView36"
            style="@style/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/country"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintVertical_bias="0." />


        <com.hbb20.CountryCodePicker
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:clickable="true"
            android:dropDownSelector="@color/orange"
            android:focusable="true"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="#666666"
            app:ccp_arrowColor="@color/orange"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="PK"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36"
            app:layout_constraintVertical_bias="0" />


        <!--        <Spinner-->
        <!--                    android:id="@+id/country"-->
        <!--                    android:layout_width="@dimen/_130sdp"-->
        <!--                    android:layout_height="@dimen/_30sdp"-->
        <!--                    android:layout_marginHorizontal="@dimen/_15sdp"-->
        <!--                    android:layout_marginTop="@dimen/_5sdp"-->
        <!--                    android:background="@drawable/contact_input_background"-->
        <!--                    android:minHeight="@dimen/_35sdp"-->
        <!--                    android:paddingStart="@dimen/_10sdp"-->
        <!--                    android:dropDownSelector="@color/orange"-->
        <!--                    android:textColor="#666666"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintHorizontal_bias="0.0"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toBottomOf="@+id/textView36" />-->

        <TextView
            android:id="@+id/textView37"
            style="@style/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toTopOf="@+id/textView36" />

        <EditText
            android:id="@+id/city"
            style="@style/open_sans_regular_small"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintTop_toTopOf="@+id/country"
            app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/editAddress1"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Address" />

        <EditText
            android:id="@+id/editAddress2"
            style="@style/open_sans_regular_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAddress1" />

        <TextView
            android:id="@+id/Address"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/address"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />


        <TextView
            android:id="@+id/textView38"
            style="@style/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/postal_code"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAddress2"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/textView39"
            style="@style/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_optional"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toTopOf="@+id/textView38" />


        <EditText
            android:id="@+id/etPostal"
            style="@style/open_sans_regular_small"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />


        <EditText
            android:id="@+id/etState"
            style="@style/open_sans_regular_small"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintBottom_toBottomOf="@+id/etPostal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/etPostal"
            app:layout_constraintTop_toTopOf="@+id/etPostal"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/btnAdd"
            style="@style/montserrat"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/button_gredient"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPostal" />

        <ImageView
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/editAddress1"
            app:layout_constraintEnd_toEndOf="@+id/editAddress1"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/editAddress1"
            app:layout_constraintTop_toTopOf="@+id/editAddress1"
            app:srcCompat="@drawable/current_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>