<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetChangeMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_bg"
        android:elevation="@dimen/_5sdp"
        android:paddingBottom="32dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="16dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/months"
            style="@style/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_mobile_number"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.1" />


        <TextView
            android:id="@+id/textView25"
            style="@style/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/mobile_number"
            android:textColor="#343434"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/months"
            app:layout_constraintVertical_bias="0.05" />


        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/contact_input_background"
            android:clickable="true"
            android:focusable="true"
            app:ccp_arrowColor="@color/orange"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="PK"
            app:ccp_showNameCode="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/open_sans_regular_small"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/contact_input_background"
            android:minHeight="@dimen/_35sdp"
            android:paddingStart="@dimen/_10sdp"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="#666666"
            app:layout_constraintBottom_toBottomOf="@+id/country_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/country_code"
            app:layout_constraintTop_toTopOf="@+id/country_code" />


        <TextView
            android:id="@+id/btnNext"
            style="@style/montserrat_bold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/card_background"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            app:layout_constraintVertical_bias="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>